test/interaction/Issue2881.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : X ?1 : P (f i c) ?2 : D ∞ _24 : D ∞ [ at Issue2881.agda:23.7-23 ] _25 : Q (f ∞ ?2) (h ∞ ?2) [ at Issue2881.agda:23.22-23 ] _26 : Q (f ∞ n) (h ∞ n) [ at Issue2881.agda:23.7-23 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: h ∞ ?2 = h ∞ n : P (f ∞ ?2) (blocked on _n_22) f ∞ ?2 = f ∞ n : X (blocked on _n_22)" nil)
((last . 1) . (agda2-goals-action '(0 1 2)))
(agda2-status-action "")
(agda2-info-action "*Constraints*" "h ∞ ?2 = h ∞ n : P (f ∞ _24) (blocked on _n_22, belongs to problem 51) f ∞ ?2 = f ∞ n : X (blocked on _n_22, belongs to problems 51, 52) _26 := _25 (blocked on problem 51) _24 := ?2 (blocked on problem 52, belongs to problem 51) _23 := ∞ (blocked on problem 52, belongs to problem 51)" nil)
